--- a/templates/index3.html
+++ b/templates/index3.html
@@ -17,6 +17,7 @@
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
         <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-secondary btn-lg" href="http://127.0.0.1:5000/" role="button">Back to Home</a></p>
       </div>
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
@@ -40,23 +41,36 @@
             alt="Responsive image"
           />
         </div>
-        <!-- Section for Hemisphere photos -->
-      <div class="row" id="mars-hemispheres">
-        <div class="col-md-6">
-          <h3>Mars Hemispheres</h3>
-          <img
-            src="{{mars.Hemispheres }}"
-            class="img-responsive"
-            alt="Responsive Image"
-          />
-        </div>
         <div class="col-md-4">
           <!-- Mars Facts -->
-          <div class="row" id="mars-facts">
-            <h4>Mars Facts</h4>
-            {{ mars.facts | safe }}
+          <table class ="table table-striped">
+            <thead class = "thead=dark">
+                <h2>Mars Facts</h2>
+            </thead>
+            <tbody>
+              <div class="row" id="mars-facts">
+                  {{ mars.facts | safe }}
+                </div>
+            </tbody>
+          </table>
+        </div>
+        <!-- Section for Hemisphere photos -->
+      <div class="row" id="mars-hemispheres">
+       <h3>Mars Hemispheres</h3> 
+       {% for hemisphere in mars.Hemispheres %}
+        <div class="col-md-3">
+          <div class = "thumbnail">
+            <img
+              src="{{hemisphere.img_url_hem}}"
+              class="img-thumbnail"
+              alt="Responsive Image"
+            />
+            <div class="caption">
+              <h3>{{hemisphere.title}}</h3>
+            </div>
           </div>
         </div>
+        {% endfor %}
       </div>
     </div>
   </body>
